 * Improved inheritance of detail_producttype.html pages, which no longer need to duplicate as much of
   the code of base_product.html, allowing for easier addition of features to the product detail pages.
 * New most popular, best sellers and recently added views
 * New tiered shipping module based on quantity
 * New Fedex shipping module


Version 0.7, May 26, 2008
-------------------------
 * Added config files to make rpm creation easier
 * German translation
 * New capability to choose the translation language
 * COD payment module
 * Category code cleanup
 * Highlight active category in the menu
 * Install documentation cleanup
 * New feature to manage translations of all parts of Satchmo content
 * Ability to add images to categories & override category sort order
 * Improvements to CustomProduct to make it more broadly useable
 * Currency displayed using the chosen locale
 * Documented creation of custom payment modules
 * Creation of new templatetags (product_category_siblings and product_images)
 * Created new Shipping Module, 'Tiered', allowing multiple carriers and variable pricing by cart total.
 * Added cybersource payment module
 * New config values to display featured products randomly
 * Increased length of Contact phonenumber to work internationally
 * Added shipping countries directly to Shop - allowing the shops to specify legal countries for shipping.
 * Updated google analytics to new code, with an optional fallback to the old urchin.js
 * Added new Tax module "Area", which calculates taxes based on country or state.
 * Updated discount system to track which discounts were applied to which line items.
 * Add weight and dimension unit info to the product model.
 * Provide integration for UPS online tools.
 * New sku model field
 * New gift certificate capability.
 * Fixed New Zealand states/region info in l10n data
 * Improvements to tax calc code
 * Updated swedish translation